--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,10 @@
 <script src="../bower_components/chai/chai.js"></script>
 <script src="../bower_components/lodash/lodash.js"></script>
 <script src="../bower_components/khoaijs/dist/khoai.js"></script>
+<script src="../bower_components/khoaijs-event-emitter/event_emitter.js"></script>
+<script src="../bower_components/khoaijs-pre-options/pre_options.js"></script>
+<script src="../bower_components/khoaijs-task/task.js"></script>
+<script src="../bower_components/khoaijs-priority/priority.js"></script>
 
 <script src="../ajax.js"></script>
 
